# curt_mini

./: CMakeLists.txt  README.md  clone_repos.sh  curt_mini.repos  curt_mini_sim.repos  ipa_outdoor_robot_bringup.repos  ipa_ros2_control.repos  mvp_driver.xml  package.xml
.github/workflows/: docs.yml
bringup/: joystick.launch.py  navigation_only.launch.py  remote_access.launch.py  robot.launch.py  robot_base.launch.py  start_controller.launch.py
config/: collision_avoidance.yaml  gz_bridge.yaml  joystick.yaml  livox_lidar_config.json  nav2_params.yaml  nav_setup.rviz  old_nav2_params_traversability_setup.yaml  ouster.yaml  ros2_control.yaml  ros2_control_simulation.yaml  twist_mux.yaml  xsens.yaml  zenoh_cfg.json5
config/localization/: ekf_map.yaml  ekf_odom.yaml  navsat_transform.yaml
config/navigation/: behavior_tree_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  local_planner_params.yaml
curt_mini/: curt_mini.repos  curt_mini_sim.repos  hw_changelog.md  package.xml  rosdoc2.yaml
curt_mini/bringup/: joystick.launch.py  remote_access.launch.py  robot_base.launch.py  start_controller.launch.py
curt_mini/config/: nav_setup.rviz  robosense.yaml  ros2_control.yaml  twist_mux.yaml
curt_mini/doc/: electronics.rst  index.rst  ros_base.rst  (+3 more)
ipa_ros2_control/: ipa_ros2_control.repos  mvp_driver.xml
launch/: mvp_ros2_control.launch.py  ros2_control.launch.py  start_controller.launch.py
mvp/: mvp_driver.xml
src/: curt_mini_hardware_interface.cpp  ethercat_wrapper.cpp  mcDSAE25.cpp  mvp_hardware_interface.cpp
(+25 files in other folders)
